[package]
name = "sapling"
version = "0.1.0"
authors = ["Ben White-Horne <kneasle@gmail.com>"]
edition = "2018"

[dependencies]
typed-arena = "2.0.1"
hmap = "0.1.0"
log = "0.4.14"
pretty_env_logger = "0.4.0"
serde_json = { version = "1.0.64", features = ["preserve_order"] }
crossterm = "0.19.0"
tui = { version = "0.14.0", default-features = false, features = ["crossterm"] }
