[package]
name = "sapling"
version = "0.1.0"
authors = ["Ben White-Horne <kneasle@gmail.com>"]
edition = "2018"

[dependencies]
typed-arena = "2.0.1"
hmap = "0.1.0"
log = "0.4.14"
pretty_env_logger = "0.4.0"
serde_json = { version = "1.0.68", features = ["preserve_order"] }
crossterm = "0.21.0"
tui = { version = "0.16.0", default-features = false, features = ["crossterm"] }
tui-logger = "0.6.4"
